movimento dei ghost (non visibile)